# hw06-shishi00

./: .buildinfo  Makefile  README.md  _toc.yml  environment.yml  genindex.html  index.ipynb  intro.html  markdown.html  notebooks.html  search.html  searchindex.js  setup.cfg
.doctrees/: README.doctree  environment.pickle  intro.doctree  markdown.doctree  notebooks.doctree
.doctrees/.pytest_cache/: README.doctree
.doctrees/ligotools/.pytest_cache/: README.doctree
.ipynb_checkpoints/: index-checkpoint.html  notebooks-checkpoint.html
_build/html/.doctrees/: hw06-description.doctree  index.doctree
_build/html/.doctrees/mybook/: intro.doctree  markdown.doctree  notebooks.doctree
_build/jupyter_execute/: index.ipynb  index.py
_build/jupyter_execute/mybook/: notebooks.ipynb
_sources/: index.ipynb
audio/: index.ipynb
ligotools/: setup.cfg  utils.py
ligotools.egg-info/: PKG-INFO  SOURCES.txt
ligotools/ligotools.egg-info/: PKG-INFO  SOURCES.txt
ligotools/tests/: test_readligo.py  test_utils.py
mybook/: _config.yml  _toc.yml  book-requirement.txt  conf.py  references.bib
mybook/_build/.doctrees/: environment.pickle  index.doctree  intro.doctree  markdown.doctree  notebooks.doctree
mybook/_build/html/: .buildinfo  genindex.html  index.html  intro.html  markdown.html  objects.inv  search.html  searchindex.js
mybook/_build/html/.doctrees/: environment.pickle  index.doctree  intro.doctree  notebooks.doctree
mybook/_build/jupyter_execute/: index.ipynb  index.py  notebooks.ipynb
