[metadata]
name = ligotools
version = attr: ligotools.__version__
author = Ligo Scientific Collaboration (LSC) and Thi Nguyen
author_email = tthinguyen@berkeley.edu
description = Reproduced Work from LSC 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Framework :: IPython
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3 

[options]
include_package_data = True
package = find:
python_requires = >=2.7
install_requires = tqdm

[tools:pytest]
python_files = test_*.py

